--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,9 +28,12 @@ test:
   imports:
     - dvc_oss
   requires:
+    - git
     - pip
   commands:
     - pip check
+    - dvc version
+    - dvc version | grep oss
 
 about:
   home: https://github.com/iterative/dvc-oss
